@@ -4,13 +4,14 @@ jalv (1.6.1) unstable;
   * Add jalv -i option to ignore stdin for background use
   * Add several commands to console interface
   * Make Suil dependency optional
+  * Remove support for deprecated event and uri-map extensions
   * Fix Jack deactivation
   * Fix potential crash when closed with worker (thanks JP Cimalando)
   * Fix potential hang after Ctrl-c in console interface (thanks Laxmi Devi)
   * Add support for underscore in port names on command line
     (thanks Jośe Fernando Moyano)
 
- -- David Robillard <d@drobilla.net>  Sat, 22 Sep 2018 23:40:18 +0200
+ -- David Robillard <d@drobilla.net>  Sun, 23 Sep 2018 15:49:05 +0200
 
 jalv (1.6.0) stable;
 
